--- a/mbed_app.json
+++ b/mbed_app.json
@@ -1,5 +1,8 @@
 {
     "target_overrides": {
+        "*": {
+            "platform.stdio-convert-newlines": true
+        },
         "UBLOX_EVK_ODIN_W2": {
             "target.device_has_remove": ["EMAC"]
         }
