--- a/mbed_app.json
+++ b/mbed_app.json
@@ -4,7 +4,7 @@
             "platform.stdio-convert-newlines": true
         },
         "UBLOX_EVK_ODIN_W2": {
-            "target.device_has_remove": ["EMAC"]
+            "target.network-default-interface-type": "ETHERNET"
         }
     }
 }
