--- a/mbed_app.json
+++ b/mbed_app.json
@@ -24,6 +24,7 @@
         },
         "DISCO_L475VG_IOT01A": {
             "target.components_add": ["ism43362"],
+            "ism43362.provide-default": true,
             "target.macros_add" : ["MBEDTLS_SHA1_C"]
         },
         "K64F": {
