--- a/mbed_app.json
+++ b/mbed_app.json
@@ -25,6 +25,7 @@
         "DISCO_L475VG_IOT01A": {
             "target.components_add": ["ism43362"],
             "ism43362.provide-default": true,
+            "target.network-default-interface-type": "WIFI",
             "target.macros_add" : ["MBEDTLS_SHA1_C"]
         },
         "K64F": {
